[package]
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"
name = "easy-fs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
log = "0.4"
spin = "0.7.0"
